--- a/view/admin/store-addProduct.html
+++ b/view/admin/store-addProduct.html
@@ -470,6 +470,11 @@ $(document).on('click', "input[name=deleteSubOption]", function() {
 // 상품 올리기 버튼 클릭
 $(document).on('click', '.write_btn', function() { 
 
+    if(($('#_productName').val()).length > 48) {
+        alert('제목은 50자 이내로 작성해주세요.');
+        return;
+    }    
+
     if($('#_productName').val() == "" || $('#_productMaker').val() == "" || $('#_productPrice').val() == "" 
             || $('#_file').val() == "" || $('#_productContent').val() == "") {
         alert('필수 항목을 입력해주세요. ');
@@ -480,6 +485,15 @@ $(document).on('click', '.write_btn', function() {
         alert('분류를 선택해주세요.');
         return;
     }
+
+    if($('span[name=hashtags]').length == 0) {
+        alert('해쉬태그를 1개 이상 작성해주세요.');
+        return;
+    } else if($('span[name=hashtags]').length > 5) {
+        alert('해쉬태그는 5개까지만 작성 가능합니다.');
+        return;
+    }
+
 
     if($('#_productDiscount').val() == "") {
         $('#_productDiscount').val(0)
@@ -492,10 +506,10 @@ $(document).on('click', '.write_btn', function() {
         type: "post",
         data: new FormData($('#upload_frm')[0]),
         enctype:"multipart/form-data",
-        async: false,
         processData:false,
         contentType:false,
         cache:false,
+        async: false,
         success: function (data) {
             console.log(data)
             thisSeq = data;
@@ -520,7 +534,7 @@ $(document).on('click', '.write_btn', function() {
         },
         success: function (data) {
             if(data == "suc") {
-                console.log = "해쉬태그 삽입 완료";
+                //console.log = "해쉬태그 삽입 완료";
             }
         },
         error: function () {
@@ -549,7 +563,7 @@ $(document).on('click', '.write_btn', function() {
         data: jsonData,
         contentType : "application/json; charset=UTF-8",
         success: function (data) {
-            console.log('옵션 작성 완료');
+            //console.log('옵션 작성 완료');
             if(data == "suc") {
                 if(confirm("상품이 정상적으로 추가되었습니다. 확인하시겠습니까?") == true) {
                     window.open('../store/storeDetail.html?seq='+thisSeq);
@@ -762,7 +776,7 @@ function hashTag(tagArr) {
     for(let i = 0; i < tagArr.length; i++) {
         //if(i == tagArr.length) break;
         if(tagArr[i] == '') continue;
-        $('#tagList').append('<span style="background-color: rgb(255, 210, 151);"># '+tagArr[i]+'</span><span>&ensp;</span>');
+        $('#tagList').append('<span name="hashtags" style="background-color: rgb(255, 210, 151);"># '+tagArr[i]+'</span><span>&ensp;</span>');
     }
     console.log(tagArr);
 }
