--- a/view/community/questionDetail.html
+++ b/view/community/questionDetail.html
@@ -447,10 +447,9 @@ $(document).ready(function(){
             type:"get",
             data:{questionSeq:seq},
             success:function(){
-                //alert('questionReadCountUp 성공');
-                //console.log("조회수 증가?");
+                console.log("조회수 증가 성공");
             }, error:function(){
-                alert('questionReadCountUp 실패');
+                console.log('questionReadCountUp 실패');
             }
         });
     }
@@ -527,14 +526,8 @@ $(document).ready(function(){
             console.log(list)
             var qdate = list.questionRegDate;
             const date2 = new Date(qdate);
-            //alert(date2);
-            //alert(getFormatDate(date2));
-            //alert(qdate);
             var date3 = getFormatDate(date2);
 
-            //alert('detail ajax 성공');
-            //alert(JSON.stringify(list));
-            //console.log(JSON.stringify(list));
             $('.question-detail-title').text(list.questionTitle);
             $('.question-detail-img').attr("src","http://localhost:3000/upload/"+list.questionFileName);
             $('.question-detail-content').append(list.questionContent);
@@ -549,15 +542,11 @@ $(document).ready(function(){
                 $('.questions-writer-profile').text("반갑습니다.");
             } else {
                 $('.questions-writer-profile').text(list.userName);
-            }
-            
+            }   
         },error:function(list){
             alert('detail ajax 대실패!!');
         }
-
     });
-
-    
 
     //해당 글에 대한 댓글 내용 뿌리기
     $.ajax({
@@ -588,8 +577,8 @@ $(document).ready(function(){
                             ripple = '';
                         }
                         
-                        if(isEmpty(val.qcStep) == false || isEmpty(val.qcDepth) == false){
-                        //if(val.qcDepth==1){
+                        //if(isEmpty(val.qcStep) == false || isEmpty(val.qcDepth) == false){
+                        if(val.qcDepth==1){
                             var reply 
                             = "<div class='comment-feed-item-reply'>"
                                 + "<a href='#' class='comment-feed-item-content-author-name'>"
@@ -605,8 +594,7 @@ $(document).ready(function(){
                         } else {
                             reply = '';
                         }
-                        
-                        
+                                                
                         if(val.qcDepth==0){
                             if(i!=0){ app += "</div></li>" }
                             app+= "<li class='comment-feed-list-item'>"
@@ -698,14 +686,14 @@ $(document).ready(function(){
     
     //댓글에 덧글창 띄우기
      $(document).on('click','.comment-feed-item-footer .cmtreply', function(){
-        //alert($(this).val() + '디스발');
+        if(sessionId==null){
+            alert('로그인 후 이용해주세요')
+            return false;
+        } 
         var reqseq = $(this).parents('.comment-feed-list-item').find("input[type='hidden']").val();
-        //alert($('input[type="hidden"]').val());
-        //alert(reqseq);
         //한번 더 실행되었을때, 이미 적용되어있다면 초기화시켜줌.
         
-        let a = $(this).parents('.comment-feed-item-footer').find('.hiddenseq').val();
-        console.log(a);
+        let uSeq = $(this).parents('.comment-feed-item-footer').find('.hiddenseq').val();
         $(this).parents('.comment-feed-list-item').find('.comment-reply').html('');
             let ripple  
                     = "<form class='comment-reply'>"
@@ -717,7 +705,7 @@ $(document).ready(function(){
                                 + "<input type='hidden' name='qcFileName' value='123'>"
                                 + "<input type='hidden' name='userSeq' value='" + sessionId.userSeq + "'>"
                                 + "<input type='hidden' name='questionSeq' value='" + $('#questionSeq').val() + "'>"
-                                + "<input type='hidden' name='qcSeq' value='" + a + "'>"
+                                + "<input type='hidden' name='qcSeq' value='" + uSeq + "'>"
                                 + "<input type='hidden' name='qcRef' value='" + $('.qcRef').val() + "'>"
                                 + "<input type='hidden' name='qcStep' value='" + $('.qcStep').val() + "'>"
                                 + "<input type='hidden' name='qcDepth' value='" + $('.qcDepth').val() + "'>"
