카카오 로그인화면전환

--- a/view/login/login.html
+++ b/view/login/login.html
@@ -245,6 +245,8 @@
                 dataType: 'text',
                 success:function(code){
                     alert("kakao ajax 성공");
+                    console.log(sessionStorage.setItem("login", code))
+                    location.href = "../community/mainCommunity.html"
                 }, error:function(code){
                     alert("kakao ajax 실패");
                 }
