내정보관리

--- a/view/login/newPw.html
+++ b/view/login/newPw.html
@@ -5,9 +5,11 @@
         <title>완벽한 자취생활, 완자</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link rel="shortcut icon" href="../../assets/img/wanza-Icon.ico" type="image/x-icon">
+        <link rel="stylesheet" href="../../assets/bootstrap/css/bootstrap.min.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="../../css/style.css">
+        
     </head>
 <style>
     html, body {
@@ -79,7 +81,7 @@
             
         </div>
     </div>
-    <footer include-html="../commons/footer.html"></footer>
+  
 </body>
 <script src="../../assets/js/jquery.min.js"></script>
 <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
