--- a/view/myPage/mainMyPage.html
+++ b/view/myPage/mainMyPage.html
@@ -424,7 +424,7 @@
                     <div><span>포인트 : </span><span> 363</span>P</div>
                     <div><span>구매등급 : </span><span></span></div>
                 </div>
-                <button type="button" class="btn_profile">회원정보 수정</button>
+                <button type="button" class="btn_profile" onclick="location.href='./userEdit.html'">회원정보 수정</button>
             </div>
         </div> <!-- 왼쪽 끝 -->
 
